# NeuralCAD-Architec

./: .env.example  .gitignore  IDEA.md  README-plataforma-proximos-passos.md  README.md  docker-compose.yml
.cursor/rules/: gsd-neuralcad.mdc
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
services/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_jobs.py  002_job_celery_task_id.py
services/api/src/neuralcad_api/: main.py  realtime_envelope.py
services/api/src/neuralcad_api/db/: models.py  session.py
services/api/src/neuralcad_api/routers/: __init__.py  intent.py
services/api/src/neuralcad_api/schemas/: elicitation.py  intent_v1.py  jobs.py
services/api/src/neuralcad_api/services/: __init__.py  intent_llm_normalize.py  payload_normalize.py  prompt_architect.py  redis_bus.py
services/api/src/neuralcad_api/ws/: job_channel.py
services/api/tests/: conftest.py  test_intent_llm_normalize.py  test_intent_schema.py  test_jobs_intent_flow.py  test_jobs_realtime.py  test_prompt_architect.py
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/src/neuralcad_worker/: celery_app.py  realtime.py
services/worker/src/neuralcad_worker/db/: sync_session.py
services/worker/src/neuralcad_worker/geometry/: measure.py  stub_solid.py
services/worker/src/neuralcad_worker/storage/: minio_client.py
services/worker/src/neuralcad_worker/tasks/: geometry.py
services/worker/tests/: test_realtime_publish.py
ui_prototypes/: README.md
(+72 files in other folders)
