[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralcad-api"
version = "0.1.0"
description = "NeuralCAD Architect API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2",
    "celery>=5.3",
    "redis>=5",
    "boto3>=1.34",
    "psycopg2-binary>=2.9",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]
