[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralcad-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.3",
    "redis>=5",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["src"]

## pythonocc-core instalado via Conda no Dockerfile (conda-forge).
